[tool.poetry]
name = "pump-tui"
version = "0.1.0"
description = "A TUI for Pump.fun"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pump_tui"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.70.0"
httpx = "^0.27.0"
solana = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
