[tool.poetry]
name = "pump-tui"
version = "1.0.1"
description = "A TUI for Pump.fun"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pump_tui"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.70.0"
httpx = "^0.27.0"
solana = "^0.30.0"
motor = "^3.3.2"
cryptography = "^42.0.0"
psutil = "^6.0.0"
websockets = "^12.0"
rich = "^13.0.0"
pillow = "^10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
